--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   "devDependencies": {
     "@crashmax/prettier-config": "3.2.1",
     "@crashmax/tsconfig": "2.0.1",
-    "sass": "1.59.3",
-    "typescript": "5.0.2",
-    "vite": "4.0.4",
-    "vite-userscript-plugin": "1.8.0"
+    "sass": "1.60.0",
+    "typescript": "5.0.3",
+    "vite": "4.2.1",
+    "vite-userscript-plugin": "1.8.1"
   },
   "dependencies": {
-    "@zero-dependency/dom": "0.12.0",
+    "@zero-dependency/dom": "1.0.1",
     "@zero-dependency/emitter": "1.1.3",
     "@zero-dependency/interact": "0.1.3",
-    "@zero-dependency/storage": "0.3.0",
+    "@zero-dependency/storage": "1.0.0",
+    "@zero-dependency/utils": "1.0.0",
     "worker-timers": "7.0.63"
   }
 }
